Flowmini/flowmini_v23_token_tree_bridge/examples/pass/fn_demo.flow
program fn_demo

fn square(n : int): int {
    n * n -> return
}

fn add_then_square(a : int, b : int): int {
    sum : int(0)
    a + b -> sum
    square(sum) -> return
}

main {
    x : int(3)
    y : int(4)
    result : int(0)

    add_then_square(x, y) -> result
    print result
}
