Flowmini/flowmini_v23_token_tree_bridge/examples/fail/bad_compare_to_int.flow
program bad_compare_to_int

main {
    a : int(1)
    b : int(2)
    n : int(0)

    a < b -> n
}
